--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 /config/settings.yml
 /config/redis/development.conf
 /config/redis/test.conf
-/db/redis/development
-/db/redis/test
+/db/development.sqlite3
+/db/production.sqlite3
 /log
 /tmp
 /webrat.log
 /vendor/webrat/vendor
+.DS_Store
