--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 /config/settings.yml
 /config/redis/development.conf
 /config/redis/test.conf
-/db/development.sqlite3
-/db/production.sqlite3
+/db/*.sqlite3
+/db/*.db
 /log
 /tmp
 /webrat.log
